litmask/tests/compile/mask_include_str_non_literal.stderr
error: mask_include_str! requires a string literal path
 --> tests/compile/mask_include_str_non_literal.rs:9:31
  |
9 |     let _ = mask_include_str!(path);
  |                               ^^^^
